--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 PORT=5000
 MONGO_URI=mongodb+srv://fundingdanabisakita:finalprojectpemweb@fundingdanabisakita.l95bp.mongodb.net/?retryWrites=true&w=majority&appName=FundingDanaBisaKita
+JWT_SECRET=finalprojectpemweb
